@@ -1,0 +1,8 @@
+0 and 8: this is a
+9 and 17:  test rea
+18 and 28: lly it is a
+29 and 52: nd I love it like McDona
+53 and 79: lds ketucky fried chicken a
+80 and 83: nd a
+84 and 89:  pizza
+finish it:  hut
