@@ -15,11 +15,11 @@ Warning: &substr: illegal substring('++this is a reversible string :)--', -11 ->
 5
 5
 5
--1
--1
--1
--1
--1
--1
--1
--1
+
+
+
+
+
+
+
+
